Updated product page
didn't add button as per demo, but that is okay!

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -19212,7 +19212,7 @@ video {
   animation: bounce 1s infinite;
 }
 
-loader {
+.loader {
   border: 5px solid #f3f3f3;
   border-radius: 50%;
   border-top: 5px solid #3468db;
