--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @tailwind utilities;
 
-loader {
+.loader {
     border: 5px solid #f3f3f3;
     border-radius: 50%;
     border-top: 5px solid #3468db;
